--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button class="btn main">Sign up</button>
                 </div>
+                <div class="hero-image">
+                    <p>this is a placeholder for an image</p>
+                </div>
             </div>
         </section>
         <section class="info">
